# FileBrowser

./: CMakeLists.txt  Makefile  README.md  zilinjak
doc/: index.html
src/: CBrowser.cpp  CBrowser.h  CCopy.cpp  CCopy.h  CData.cpp  CData.h  CDelete.cpp  CDelete.h  CFile.cpp  CFile.h  CFolder.cpp  CFolder.h  CInterface.cpp  CInterface.h  CMove.cpp  CMove.h  COperations.cpp  COperations.h  CRegExp.cpp  CRegExp.h  CSymlink.cpp  CSymlink.h  main.cpp
